# flewt

./: .gitignore  .ocamlformat  LICENSE  Makefile  README.md  deps.txt  dune-project  dune-workspace  flewt.opam  progress.org  progress.org~  useful.txt
lib/: dune
lib/basis/: basis.ml  basis.mli  bool.ml  char.ml  charVector.ml  dune  general.ml  iO.ml  imperativeIO.ml  io.ml  list.ml  option.ml  primIO.ml  streamIO.ml  string.ml  stringCvt.ml  substring.ml  textIO.ml  textPrimIO.ml  textStreamIO.ml  time.ml
lib/compat/: array-97.ml  array-slice.ml  array.ml  array_97.ml  array_slice.ml  compat-97.ml  compat-poly02.ml  compat.ml  compat_97.ml  compat_poly02.ml  dune  mono-array-slice.ml  mono_array_slice.ml  path-97.ml  path.ml  path_97.ml  socket-97.ml  socket.ml  socket_97.ml  substring-97.ml  substring.ml  substring_97.ml  text-io-97.ml  text-io.ml  text_io.ml  text_io_97.ml  time-limit-smlnj.ml  time-limit.ml  time_limit.ml  time_limit_smlnj.ml  timer-97.ml  timer.ml  timer_97.ml  vector-97.ml  vector-slice.ml  vector.ml  vector_97.ml  vector_slice.ml  word8-array-slice.ml  word8-vector-slice.ml  (+2 more)
lib/compile/: assign.ml  compile.ml  compsyn.ml  cprint.ml  dune  subtree.ml
lib/compress/: compress.ml  convert.ml  dune  parse.ml  reductio.ml  rep.ml  sgn.ml  strict.ml  syntax.ml
lib/cover/: cover.ml  dune  total.ml
lib/delphin/: delphin.ml  dextsyn.ml  dune  interface.ml  parse-prg.ml  parse_prg.ml  trans.ml
lib/delphin/ml-yacc-lib-mod/: base.ml  dune  join.ml  stream.ml  (+2 more)
lib/domains/: domains.ml  dune  field.ml  integers-mod.ml  integers.ml  integers_mod.ml  ordered-field.ml  ordered_field.ml  rationals.ml
lib/flit/: dune  flit-old-smlnj-pack.ml  flit.ml  flit_old_smlnj_pack.ml  script.ml
lib/formatter/: dune  formatter.ml
lib/frontend/: dune  fquery.ml  frontend.ml  lexer.ml  parse-condec.ml  parse-fixity.ml  parse-mode.ml  parse-module.ml  parse-query.ml  parse-term.ml  parse-thm.ml  parse_condec.ml  parse_fixity.ml  parse_mode.ml  parse_module.ml  parse_query.ml  parse_term.ml  parse_thm.ml  parser.ml  parsing.ml  recon-condec.ml  recon-mode.ml  recon-module.ml  recon-query.ml  recon-term.ml  recon-thm.ml  recon_condec.ml  recon_mode.ml  recon_module.ml  recon_query.ml  recon_term.ml  recon_thm.ml  solve.ml  twelf.ml  unknownexn-smlnj.ml  unknownexn-stub.ml  unknownexn.ml  unknownexn_smlnj.ml  unknownexn_stub.ml  version.ml
lib/global/: dune  global.ml
lib/heuristic/: dune  heuristic.ml  heuristic.sum.ml
lib/index/: dune  index-skolem.ml  index.ml  index_skolem.ml
lib/int-inf/: dune  int-inf-sig.ml  int-inf.ml  int_inf.ml  int_inf_sig.ml
lib/int_inf/: dune~  int_inf.ml  int_inf.ml~  int_inf_sig.ml  int_inf_sig.ml~
lib/inverse/: context.ml  dune  growarray.ml  layout.ml  lib.ml  print.ml  signat.ml  syntax.ml  table.ml  translate.ml  typecheck.ml  typecheckEE.ml  typecheckEL.ml
lib/lambda/: abstract.ml  approx.ml  constraints.ml  conv.ml  dune  fgnopn.ml  fgnopntable.ml  intsyn.ml  lambda.ml  match.ml  normalize.ml  order.ml  tomega.ml  unify.ml  whnf.ml
lib/m2/: dune  filling.ml  init.ml  lemma.ml  m2.ml  meta-abstract.ml  meta-global.ml  meta-print.ml  meta_abstract.ml  meta_global.ml  meta_print.ml  metasyn.ml  mpi.ml  prover.ml  qed.ml  recursion.ml  search.ml  skolem.ml  splitting.ml  strategy.ml
lib/meta/: abstract.ml  data.ml  dune  filling.ml  funnames.ml  funprint.ml  funsyn.ml  funtypecheck.ml  funweaken.ml  global.ml  inference.ml  init.ml  interpret.ml  meta.ml  mpi.ml  print.ml  prover.ml  recursion.ml  relfun.ml  search.ml  splitting.ml  statesyn.ml  strategy.ml  uniquesearch.ml  weaken.ml
lib/modes/: dune  modecheck.ml  modedec.ml  modeprint.ml  modes.ml  modesyn.ml  modetable.ml
lib/modules/: dune  modsyn.ml  modules.ml
lib/msg/: dune  msg.ml
lib/names/: dune  names.ml
lib/netserver/: buildheap.ml  dune  netserver.ml
lib/opsem/: absmachine-sbt.ml  absmachine.ml  absmachine_sbt.ml  abstract.ml  dune  index.ml  opsem.ml  ptrecon.ml  subtree-inst.ml  subtree.ml  subtree_inst.ml  sw-subtree.ml  sw_subtree.ml  swmachine.ml  table-param.ml  table_param.ml  tabled.ml  tmachine.ml  trace.ml
lib/order/: dune  order.ml
lib/paths/: dune  origins.ml  paths.ml
lib/print/: clause-print.ml  clause_print.ml  dune  print-omdoc.ml  print-twega.ml  print-xml.ml  print.ml  print_omdoc.ml  print_twega.ml  print_xml.ml  symbol.ml  traverse.ml
lib/prover/: data.ml  dune  elim.ml  fill.ml  fixedpoint.ml  interactive.ml  introduce.ml  prover.ml  recurse.ml  search.ml  split.ml  state.ml  stateprint.ml  weaken.ml
lib/server/: dune  mlton-thread.ml  mlton_thread.ml  server.ml  sigint-mlton.ml  sigint-polyml.ml  sigint-smlnj.ml  sigint.ml  sigint_mlton.ml  sigint_noop.ml  sigint_polyml.ml  sigint_smlnj.ml
lib/solvers/: cs-eq-bools.ml  cs-eq-field.ml  cs-eq-integers.ml  cs-eq-strings.ml  cs-ineq-field.ml  cs-ineq-integers.ml  cs-integers-word.ml  cs-manager.ml  cs.ml  cs_eq_bools.ml  cs_eq_field.ml  cs_eq_integers.ml  cs_eq_strings.ml  cs_ineq_field.ml  cs_ineq_integers.ml  cs_integers_word.ml  cs_manager.ml  dune  solvers.ml
lib/stream/: dune  stream.ml
lib/style/: dune  style.ml
lib/subordinate/: dune  intset.ml  subordinate.ml
lib/table/: dune  hash-table.ml  hash.ml  hash_table.ml  queue.ml  red-black-set.ml  red-black-tree.ml  red_black_set.ml  red_black_tree.ml  redblack.ml  ring.ml  sparse-array.ml  sparse-array2.ml  sparse_array.ml  sparse_array2.ml  string-hash.ml  string_hash.ml  table.ml  table_sig.ml
lib/tabling/: dune  tabled.ml  tabledsyn.ml
lib/terminate/: checking.ml  dune  reduces.ml  terminate.ml
lib/thm/: dune  thm.ml  thmprint.ml  thmsyn.ml
lib/timing/: dune  time-limit.ml  time_limit.ml  timers.ml  timing.ml  timing_src.ml
lib/tomega/: abstract.ml  converter.ml  coverage.ml  dune  normalize.ml  opsem.ml  redundant.ml  tomega.ml  tomega_src.ml  tomeganames.ml  tomegaprint.ml  typecheck.ml  unify.ml
lib/trail/: dune  notrail.ml  trail.ml  trail_core.ml
lib/typecheck/: dune  strict.ml  typecheck.ml
lib/unique/: dune  unique.ml
lib/worldcheck/: dune  worldcheck.ml  worldify.ml  worldsyn.ml
(+37 files in other folders)
