(library

 (public_name flewt.basis)
 (name basis)
 (libraries
  base
  unix
 )
 (modules
   basis
   general option bool list string
   stringCvt time io char charVector substring
   primIO streamIO imperativeIO textPrimIO textStreamIO textIO)
 (preprocess (staged_pps ppx_import ppx_deriving.show ppx_deriving.eq ppx_deriving.ord ppx_deriving.make)))
