(library
 (wrapped false)
 (public_name flewt.prover)
 (name prover)
 (libraries
  base
  tomega
  lambda
  global
  names
  print
  index
  modes
  typecheck
  table
  subordinate
  solvers
  opsem
  trail
  compile
  worldcheck
  formatter
  timing)
 (modules
  data
  elim
  fill
  fixedpoint
  introduce
  interactive
  prover
  search
  split
  state
  weaken))
