(library
 (wrapped false)
 (public_name flewt.tomega)
 (name tomega)
 (libraries
  base
  global
  lambda
  worldcheck
  cover
  formatter
  names
  print
  typecheck
  subordinate
  meta
  modes
  trail)
 (modules
  abstract
  converter
  coverage
  opsem
  redundant
  tomega_src
  tomeganames
  tomegaprint
  typecheck
  unify))
