(library 
 (wrapped (transition "Convert SML convention to OCaml convention"))
 
 (public_name flewt.inverse_sml)
 (name inverse_sml)
 (libraries 
  base
  lambda
  print
  frontend
  timing
 )
 (modules 
  context
  debug
  growarray
  layout
  lib
  syntax
  table
  timers
  translate
  typecheck))
